[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.5", package = "gtk4" }
glium = { version = "0.32", optional = true, default-features = false }
epoxy = { version = "0.1.0", optional = true }
libloading = { version = "0.7.0", optional = true }